<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.ultrashk.creditcalc.ui.StartFragment">
    <data>
        <variable
            name="startFragment"
            type="ru.ultrashk.creditcalc.ui.StartFragment" />
        <variable
            name="viewModel"
            type="ru.ultrashk.creditcalc.model.CalcViewModel" />
    </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:ems="10"
                android:hint="@string/summaLabel"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:text="@{viewModel.sum.toString()}"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNumber2Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:ems="10"
                android:hint="@string/month"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumberLayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextNumberLayout"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@{viewModel.month.toString()}"
                    android:textColorHint="#616161" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNumber3Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:maxWidth="@dimen/custom_max_width"
                android:minWidth="@dimen/custom_min_width"
                android:ems="10"
                android:hint="@string/percent"
                app:layout_constraintEnd_toEndOf="@+id/editTextNumber2Layout"
                app:layout_constraintStart_toStartOf="@+id/editTextNumber2Layout"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber2Layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumber3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:text="@{viewModel.percent.toString()}"
                    android:textColorHint="#616161" />

            </com.google.android.material.textfield.TextInputLayout>



            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber3Layout" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@{@string/pay_per_month(viewModel.monthPay)}"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                tools:text="Ежемесячный платеж" />

            <Button
                android:id="@+id/calc_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/calc_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:onClick="@{()->startFragment.calcMonthPay()}"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/grafik_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calc_button"
                android:onClick="@{()->startFragment.showGrafik()}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>