<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.ultrashk.creditcalc.ui.GrafikFragment">
    <data>
        <variable
            name="grafikFragment"
            type="ru.ultrashk.creditcalc.ui.GrafikFragment" />
        <variable
            name="viewModel"
            type="ru.ultrashk.creditcalc.model.CalcViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/summaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summaLabel"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Сумма кредита" />

            <TextView
                android:id="@+id/monthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthLabel"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summaLabel"
                tools:text="Срок кредита" />

            <TextView
                android:id="@+id/percentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textAllCaps="true"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthLabel"
                tools:text="Процентная ставка" />

            <TextView
                android:id="@+id/summa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@{viewModel.sum.toString()}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/summaLabel"
                tools:text="100000" />

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@{viewModel.month.toString()}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/summaLabel"
                tools:text="12" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@{viewModel.percent.toString()}"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/monthLabel"
                tools:text="12.9" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?attr/dividerHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:listData="@{viewModel.grafiks}"
                tools:listitem="@layout/grafik_view_item" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="364dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>
